--- a/Basic/index.html
+++ b/Basic/index.html
@@ -113,6 +113,23 @@
 
     <aside>
       <!-- usually for sidebar or other less important parts of our page -->
+      <ul>
+        <li>
+          <img src="img/related-1.jpg" width="75px" height="75px" />
+          <a href="google.com">How to learn Web Dev</a>
+          <h5>By Jonas Scheme...</h5>
+        </li>
+        <li>
+          <img src="img/related-2.jpg" width="75px" height="75px" />
+          <a href="google.com">The Unknown Powers of CSS</a>
+          <h5>By Jim Dillon</h5>
+        </li>
+        <li>
+          <img src="img/related-3.jpg" width="75px" height="75px" />
+          <a href="google.com">why JS is Awsome</a>
+          <h5>By Matilda</h5>
+        </li>
+      </ul>
     </aside>
 
     <footer>Copyright &copy; 2027 by The Code Magazine.</footer>
